--- a/packages/discord.js/package.json
+++ b/packages/discord.js/package.json
@@ -56,6 +56,7 @@
     "fast-deep-equal": "^3.1.3",
     "lodash.snakecase": "^4.1.1",
     "tslib": "^2.3.1",
+    "tweetnacl": "^1.0.3",
     "undici": "^4.16.0",
     "ws": "^8.5.0"
   },
